--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ## Settings
-title: pRoJEct-NeGYa
-owner: "DeerRIDER"
-url: "https://akiritsu.github.io"
+title: TEST
+owner: "reha"
+url: "https://rehayilmazlar.github.io"
 baseurl: "/pRoJEct-NeGYa"
 permalink: /:title/
 description: ""
